--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
 Flask
+Flask-SQLAlchemy
+Flask-Login
+Flask-WTF
+Flask-Migrate
+Flask-Mail
+psycopg2-binary
+passlib
+itsdangerous
+email_validator
